tests/paczka1/fuzzy1/38607724.err
Error in line 6: dkN5yUtPDY A705 74,9
Error in line 17: MtALLQJGMN S182 22,5
Error in line 19: QPXoku S989 18,9
Error in line 26: S182 S94 182,92
Error in line 29: 9mCL70 S182 61,4
Error in line 14: m2j19 A705 60,3
Error in line 31: MtALLQJGMN S182 15,8
Error in line 33: MtALLQJGMN S94 20,1
Error in line 32: m2j19 S182 54,4
Error in line 35: MtALLQJGMN S989 128,7
